jacinto6evm: clean up unsued configurations
Remove old/unused configurations from init.rc and ueventd.rc

Change-Id: I7a6a822a5b679c97beaef6c5849efe1fa38c843f
Signed-off-by: Vishal Mahaveer <vishalm@ti.com>

--- a/ueventd.jacinto6evmboard.rc
+++ b/ueventd.jacinto6evmboard.rc
@@ -1,14 +1,11 @@
 #for PVR
 /dev/pvrsrvkm             0666   system     system
 
-#for DSSCOMP
-/dev/dsscomp              0666   system     system
-
 # for IPC3.x
 /dev/rpmsg-dce            0660   media      media
 
-# V4L camera
-/dev/video*               0660   system    camera
+# for ION
+/dev/ion                  0664   system     system
 
 # for Bluetooth
 /dev/hci_tty              0666   bluetooth bluetooth
@@ -21,9 +18,6 @@
 
 # cmem
 /dev/cmem                 0660   system system
-
-#for GCX
-/dev/gcioctl              0666   system     system
 
 # for GNSS
 /dev/tigps                0666   root	    root
