--- a/ueventd.jacinto6evmboard.rc
+++ b/ueventd.jacinto6evmboard.rc
@@ -4,6 +4,9 @@
 # for IPC3.x
 /dev/rpmsg-dce            0660   media      media
 
+# V4L camera
+/dev/video*               0660   system    camera
+
 # for ION
 /dev/ion                  0664   system     system
 
