--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -65,7 +65,7 @@ on boot
     insmod /system/lib/modules/wlcore_sdio.ko
 
     # CMEM for Radio
-    insmod /system/lib/modules/cmemk.ko phys_start=0x95400000 phys_end=0x95800000 pools=15x262144 allowOverlap=1
+    insmod /system/lib/modules/cmemk.ko phys_start=0x95400000 phys_end=0x95800000 pools=20x65536,40x4096 allowOverlap=1
 
 on fs
     mkdir /factory 0775 radio radio
