--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -93,19 +93,22 @@ service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emul
     class late_start
 
 service p2p_supplicant /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
-    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
-    -O/data/misc/wifi/sockets -g@android:wpa_wlan0
-    class main
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
+    -I/system/etc/wifi/wpa_supplicant_overlay.conf \
+    -O/data/misc/wifi/sockets -pp2p_device=1\
+    -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
     socket wpa_wlan0 dgram 660 wifi wifi
+    class late_start
     disabled
     oneshot
 
 service wpa_supplicant /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin \
-    -O/data/misc/wifi/sockets -g@android:wpa_wlan0
-    class main
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
+    -I/system/etc/wifi/wpa_supplicant_overlay.conf \
+    -O/data/misc/wifi/sockets \
+    -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
     socket wpa_wlan0 dgram 660 wifi wifi
+    class late_start
     disabled
     oneshot
 
