--- a/ueventd.jacinto6evmboard.rc
+++ b/ueventd.jacinto6evmboard.rc
@@ -1,5 +1,6 @@
 #for PVR
 /dev/pvrsrvkm             0666   system     system
+/dev/pvr_sync             0666   system     system
 
 # for IPC3.x
 /dev/rpmsg-dce            0666   media      media
