--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -15,8 +15,8 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
-    mkdir /data/lad 0770 system system
-    mkdir /data/lad/LAD 0770 system system
+    mkdir /data/lad 0770 media system
+    mkdir /data/lad/LAD 0770 media system
 
 # enabling thermal zone for mpu
     write /sys/class/thermal/thermal_zone0/mode enabled
@@ -138,7 +138,7 @@ service hostapd_bin /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
 
 service lad_dra7xx /system/bin/logwrapper /system/bin/lad_dra7xx
     class main
-    user system
+    user media
     group system
     disabled
     oneshot
