--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -136,11 +136,10 @@ service hostapd_bin /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
     disabled
     oneshot
 
-service lad_dra7xx /system/bin/logwrapper /system/bin/lad_dra7xx
+service lad_dra7xx /system/bin/logwrapper /system/bin/lad_dra7xx -g
     class main
     user media
     group system
-    disabled
     oneshot
 
 service devproxy /system/bin/devproxy
