jacinto6evm: dev node permissions for sw_sync
Change-Id: I4b6da4fdc757496e349ff1487dd656f81d6e7add
Signed-off-by: Gowtham Tammana <g-tammana@ti.com>

--- a/ueventd.jacinto6evmboard.rc
+++ b/ueventd.jacinto6evmboard.rc
@@ -1,6 +1,9 @@
 #for PVR
 /dev/pvrsrvkm             0666   system     system
+
+# for android sync framework
 /dev/pvr_sync             0666   system     system
+/dev/sw_sync              0666   system     system
 
 # for IPC3.x
 /dev/rpmsg-dce            0666   media      media
