jacinto6evm: Add the 'radio_app' service
The radio_app service runs the VIS_SDK's RadioApp with
ethernet interface.

Change-Id: I47f7b9b29f02d88f2de21d5002fe84d4b407dfa0
Signed-off-by: Misael Lopez Cruz <misael.lopez@ti.com>

--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -142,6 +142,13 @@ service lad_dra7xx /system/bin/logwrapper /system/bin/lad_dra7xx -g
     group system
     oneshot
 
+service radio_app /system/bin/logwrapper /system/bin/RadioApp -h eth
+    class main
+    user media
+    group system inet
+    disabled
+    oneshot
+
 service devproxy /system/bin/devproxy
     class main
     disabled
