--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -136,13 +136,13 @@ service hostapd_bin /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
     disabled
     oneshot
 
-service lad_dra7xx /system/bin/logwrapper /system/bin/lad_dra7xx -g
+service lad_dra7xx /system/bin/lad_dra7xx -g
     class main
     user media
     group system
     oneshot
 
-service radio_app /system/bin/logwrapper /system/bin/RadioApp -h eth
+service radio_app /system/bin/RadioApp -h eth
     class main
     user media
     group system inet
