--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -43,6 +43,9 @@ on boot
 
 on fs
     mount_all /fstab.jacinto6evmboard
+    # Load modules
+    exec u:r:modprobe:s0 -- /system/bin/modprobe -a -d \
+         /vendor/lib/modules wl18xx.ko wlcore.ko wlcore_sdio.ko
 
 service pvrsrvinit /vendor/bin/pvrsrvinit
     class core
