--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -1,4 +1,4 @@
-import init.jacinto6evmboard.usb.rc
+import /vendor/etc/init/hw/init.jacinto6evmboard.usb.rc
 
 on early-init
     mount debugfs /sys/kernel/debug /sys/kernel/debug mode=755
@@ -24,7 +24,7 @@ on post-fs-data
 on boot
 
     # execute script to set cpuset configuration
-    exec - root root system -- /system/bin/init.jacinto6evmboard.cpuset.sh
+    exec - root root system -- /vendor/bin/init.jacinto6evmboard.cpuset.sh
 
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
