jacinto6evm: modules: add USB mass storage
Add USB mass storage related kernel modules to the list
of vendor modules.

Change-Id: If975a0ee751f275b03603ea6924100a8be763ee2
Signed-off-by: Subash Lakkimsetti <x0091084@ti.com>

--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -45,7 +45,8 @@ on fs
     mount_all /fstab.jacinto6evmboard
     # Load modules
     exec u:r:modprobe:s0 -- /system/bin/modprobe -a -d \
-         /vendor/lib/modules wl18xx.ko wlcore.ko wlcore_sdio.ko
+         /vendor/lib/modules wl18xx.ko wlcore.ko wlcore_sdio.ko \
+                             scsi_mod.ko usb-storage.ko sd_mod.ko
 
 service pvrsrvinit /vendor/bin/pvrsrvinit
     class core
