jacinto6evm: move module loading to late-init
Now that we have early mounting of vendor partition enabled, module
loading is not dependent on fs.

Change-Id: I3a9628d4e507ce2bba92096147c0bb9f9dfb6ca9
Signed-off-by: Vishal Mahaveer <vishalm@ti.com>

--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -43,6 +43,8 @@ on boot
 
 on fs
     mount_all /fstab.jacinto6evmboard
+
+on late-init
     # Load modules
     exec u:r:modprobe:s0 -- /system/bin/modprobe -a -d \
          /vendor/lib/modules wl18xx.ko wlcore.ko wlcore_sdio.ko \
