--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -118,7 +118,7 @@ service hostapd_bin /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
     disabled
     oneshot
 
-service lad_dra7xx /system/bin/lad_dra7xx -g
+service lad_dra7xx /vendor/bin/lad_dra7xx -g
     class main
     user media
     group system
