--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -15,8 +15,8 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
-    mkdir /data/lad 0770 media system
-    mkdir /data/lad/LAD 0770 media system
+    mkdir /data/lad 0770 system media
+    mkdir /data/lad/LAD 0770 system media
 
 # enabling thermal zone for mpu
     write /sys/class/thermal/thermal_zone0/mode enabled
@@ -128,13 +128,13 @@ service hostapd_bin /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
 
 service lad_dra7xx /vendor/bin/lad_dra7xx -g
     class main
-    user media
-    group system
+    user system
+    group media
     oneshot
 
 service vis /vendor/bin/RadioApp -h eth
     class main
-    user media
-    group system inet
+    user system
+    group media inet
     disabled
     oneshot
