jacinto6evm: move device specific configs to vendor
Move device specific configuration files to vendor partition.

Change-Id: I92a9f2f9311514cc43656c090f9bee65208d9ff2
Signed-off-by: Vishal Mahaveer <vishalm@ti.com>

--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -42,7 +42,7 @@ on boot
     chmod 0755 /sys/kernel/debug/tracing
 
 on fs
-    mount_all /fstab.jacinto6evmboard
+    mount_all /vendor/etc/fstab.jacinto6evmboard
 
 on late-init
     # Load modules
