--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -31,7 +31,7 @@ on boot
     mkdir /data/misc/dhcp 0770 dhcp dhcp
 
     # CMEM for Radio
-    insmod /vendor/lib/modules/cmemk.ko phys_start=0x95400000 phys_end=0x95800000 pools=25x65536,40x4096 allowOverlap=1
+    insmod /vendor/lib/modules/cmemk.ko phys_start=0x95400000 phys_end=0x95800000 pools=1x147456,2x131072,25x65536,40x4096 allowOverlap=1
 
     # 2d blitter
     insmod /system/lib/modules/galcore.ko physSize=0xc0000000
