jacinto6evm: hold a dummy wake_lock
The dummy wake_lock was previously removed since we configured
the device to not turn off screen. But there are some CTS test
cases where it is possible for screen to be turned off.

Hold a dummy wake_lock to prevent suspend in such scenarios.

Change-Id: Ie8930b5111b6d368a69b112e6623737173752239
Signed-off-by: Vishal Mahaveer <vishalm@ti.com>

--- a/init.jacinto6evmboard.rc
+++ b/init.jacinto6evmboard.rc
@@ -15,6 +15,8 @@ on post-fs-data
 
     #enabling thermal zone for mpu
     write /sys/class/thermal/thermal_zone0/mode enabled
+    #hold a dummy wake_lock
+    write /sys/power/wake_lock dummy
 
 on boot
 
